[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpilot-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "supabase>=2.9.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "apscheduler>=3.10",
  "playwright>=1.48",
  "playwright-stealth>=1.0.6",
  "openai>=1.50",                  # also used for DeepSeek (OpenAI-compat)
  "google-api-python-client>=2.140",
  "google-auth>=2.34",
  "google-auth-oauthlib>=1.2",
  "tenacity>=9.0",
  "structlog>=24.4",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "rapidfuzz>=3.9",
  "click>=8.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
